added infinite scroll

--- a/infinite_scroll/pubspec.yaml
+++ b/infinite_scroll/pubspec.yaml
@@ -1,5 +1,5 @@
-name: test_project
-description: A new Flutter application.
+name: infinite_scroll
+description: Infinite scroll
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
