--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Flutter animation
-description: Flutter animation test
+#title: Flutter animation
+#description: Flutter animation test
 #show_downloads: true
-google_analytics:
+#google_analytics:
 theme: jekyll-theme-cayman
